--- a/server/package.json
+++ b/server/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "ts-node ./index.ts",
-    "start": "nodemon --exec 'npm run serve'"
+    "start": "nodemon --ext ts,js,json --watch ./server --exec 'npm run serve'"
   },
   "author": "Loloao",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.9.0",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
