--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "ts-node ./index.ts",
-    "start": "nodemon --ext ts,js,json --watch ./server --exec 'npm run serve'"
+    "start": "nodemon --ext ts,js,json --exec 'npm run serve'"
   },
   "author": "Loloao",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
