--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "ts-node ./index.ts",
-    "start": "nodemon --ext ts,js,json --exec 'npm run serve'"
+    "start": "nodemon --ext ts,js,json --exec \"npm run serve\""
   },
   "author": "Loloao",
   "license": "ISC",
