--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
+    "react-scrollable-feed": "^1.3.1",
     "socket.io-client": "^4.6.0"
   },
   "devDependencies": {
