--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,13 @@
     "framer-motion": "^8.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-notification-badge": "^1.5.1",
     "react-router-dom": "^5.3.4",
     "react-scrollable-feed": "^1.3.1",
     "socket.io-client": "^4.6.0"
   },
   "devDependencies": {
+    "@types/node": "^18.13.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
