--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a simple chat app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install --prefix client && npm run build --prefix client",
+    "start": "node ./server/srcPrd/index.js"
   },
   "repository": {
     "type": "git",
