--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
   "dependencies": {
     "express": "^4.18.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "typescript": "^4.9.5"
+  }
 }
