--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-notification-badge": "^1.5.1",
     "react-router-dom": "^5.3.4",
     "react-scrollable-feed": "^1.3.1",
-    "socket.io-client": "^4.6.0"
+    "socket.io-client": "^4.6.0",
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
@@ -28,7 +29,6 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^3.0.0",
-    "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
 }
