--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "easy-chat",
+  "name": "easy-chat-server",
   "version": "1.0.0",
-  "description": "a simple chat app",
-  "main": "server.js",
+  "description": "easy-chat backend",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install --prefix server && npm install --prefix client && npm run build --prefix client",
-    "start": "node ./server/srcPrd/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Loloao/easy-chat.git"
+    "serve": "ts-node ./src/index.ts",
+    "dev": "nodemon --ext ts,js,json --exec \"npm run serve\"",
+    "start": "node ./srcPrd/index.js"
   },
   "author": "Loloao",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Loloao/easy-chat/issues"
-  },
-  "homepage": "https://github.com/Loloao/easy-chat#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.16",
+    "@types/node": "^18.11.18",
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "dotenv": "^16.0.3",
+    "easy-chat": "file:..",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.0",
+    "nodemon": "^2.0.20",
+    "socket.io": "^4.6.0"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/mongoose": "^5.11.97",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
